# frontend-microservice

./: .env.TEMPLATE  .gitignore  Dockerfile  README.md  base.html  pyproject.toml
.github/workflows/: build-and-push-container.yml
frontend/: config.py  settings.py  urls.py  views.py
gallery/: models.py  urls.py  views.py
gallery/templates/: gallery.html
scripts/: migrate-and-run-in-docker.sh
templates/: base.html  gallery.html  image.html  login.html  share.html
users/: forms.py  models.py  schemas.py  settings.py  urls.py  views.py
users/templates/: login.html  registration.html
